--- a/index.html
+++ b/index.html
@@ -60,9 +60,19 @@
 		</section>
 		<!-- /Slider -->
 
-		<!-- Operations -->
-		<section class="section section--operations" id="operations">
-			<h2 class="heading-primary">02.Operations</h2>
+		<!-- Tab -->
+		<section class="section section--tab" id="tab">
+			<h2 class="heading-primary">02.Tab</h2>
+			<div class="tab">
+				<div class="tab__container">
+					<button class="tab__btn tab__btn--1 tab__btn--active" data-tab="1">01.My Profile</button>
+					<button class="tab__btn tab__btn--2" data-tab="2">02.My Skills</button>
+					<button class="tab__btn tab__btn--3" data-tab="3">03.My Hobby</button>
+				</div>
+				<div class="tab__content tab__content--1 tab__content--active">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, accusamus adipisci? Reiciendis, veniam at rem ab odio accusamus reprehenderit debitis quos.</div>
+				<div class="tab__content tab__content--2">HTML/CSS</div>
+				<div class="tab__content tab__content--3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, accusamus adipisci? Reiciendis, veniam at rem ab odio accusamus reprehenderit debitis quos. Praesentium reiciendis asperiores sunt expedita? Excepturi voluptatibus dignissimos facilis!</div>
+			</div>
 		</section>
 		<!-- /Slider -->
 		<!-- JavaScript File-->
