--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<p class="nav__logo">JS Practice</p>
 				<ul class="nav__links">
 					<li class="nav__item"><a href="#slider" class="nav__link">Slider</a></li>
-					<li class="nav__item"><a href="#operations" class="nav__link">Operations</a></li>
+					<li class="nav__item"><a href="#tab" class="nav__link">Operations</a></li>
 					<li class="nav__item"><a href="" class="nav__link">Modal</a></li>
 				</ul>
 			</nav>
