--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</section>
 		<!-- /Slider -->
 		<!-- JavaScript File-->
-		<script src="node_modules/smoothscroll-polyfill/dist/smoothscroll.js"></script>
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=smoothscroll"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
