--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul class="nav__links">
 					<li class="nav__item"><a href="#slider" class="nav__link">Slider</a></li>
 					<li class="nav__item"><a href="#tab" class="nav__link">Operations</a></li>
-					<li class="nav__item"><a href="" class="nav__link">Modal</a></li>
+					<li class="nav__item nav__btn"><a class="nav__link btn--modal">Modal</a></li>
 				</ul>
 			</nav>
 			<!-- /Navigation -->
@@ -75,6 +75,24 @@
 			</div>
 		</section>
 		<!-- /Slider -->
+
+		<!-- Modal -->
+		<div class="modal hidden">
+			<button class="btn--close">&times;</button>
+			<h2 class="heading-secondary">Modal Window</h2>
+			<form class="form" action="">
+				<label for="">Name</label>
+				<input type="text">
+				<label for="">Email</label>
+				<input type="email">
+				<label for="">Password</label>
+				<input type="password">
+				<button class="btn--form">LOGIN</button>
+			</form>
+			</h2>
+		</div>
+		<div class="overlay hidden"></div>
+		<!-- /Modal -->
 		<!-- JavaScript File-->
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=smoothscroll"></script>
 		<script src="script.js"></script>
